cambios en index y main.css
agregado de imagen con movimiento

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
    
     <header>
+        
         <nav id="nav_ind">
+            <nav><img id="imghead" src="imagenes/icon.png"></nav>    
             <a class="nav" href="index.html" >Home</a>
             <a class="nav" href="about.html" >Quienes Somos</a>
             <a class="nav" href="servicio.html" >Qué Hacemos</a>
