--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         
         <nav id="nav_ind">
-            <nav><img id="imghead" src="imagenes/icon.png"></nav>    
+            <nav id="nav_img"><img src="imagenes/icon.png"></nav>    
             <a class="nav" href="index.html" >Home</a>
             <a class="nav" href="about.html" >Quienes Somos</a>
             <a class="nav" href="servicio.html" >Qué Hacemos</a>
