agregado de otro css
se agrego style.css y se logro hacer imagen con moviemiento y cambios en
about

--- a/servicio.html
+++ b/servicio.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/4879e652c8.js" crossorigin="anonymous"></script>
     <script src="https://www.google.com/webfonts" crossorigin="webfonts"></script>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="imagenes/icon.png">
     <title>GRUPO2 Performance, Servicio mecánico</title>
 </head>
@@ -23,13 +24,33 @@
     <main>
         <div id="div_ind">
             <h3 id="h3_serv">Nuestros servicios para autos importados</h3>
-            <p id="p_serv">Contamos con las herramientas homologadas de fábrica para la <br> atención de las unidades según las normas establecidas.</p>
-        <img src="imagenes/auto1.jpg" alt="auto1" width="33%" height="250">
-        <img src="imagenes/auto2.jpg" alt="auto2" width="33%" height="250">
-        <img src="imagenes/auto3.jpg" alt="auto3" width="33%" height="250">
-        <img src="imagenes/auto4.jpg" alt="auto4" width="33%" height="250">
-        <img src="imagenes/auto5.jpg" alt="auto5" width="33%" height="250">
-        <img src="imagenes/auto6.jpg" alt="auto6" width="33%" height="250">
+            <p id="p_serv">Contamos con las herramientas homologadas de fábrica para la <br> atención de las unidades según las normas establecidas.</p>                
+        <section class="container">
+            <section class="card">
+                <img class="imagen" src="imagenes/auto1.jpg" alt="auto1">
+                <p>Mecánica en general</p>
+            </section>
+            <section class="card">    
+                <img class="imagen" src="imagenes/auto2.jpg" alt="auto2">
+                <p>Electrónica</p>
+            </section>
+            <section class="card">
+                <img class="imagen" src="imagenes/auto3.jpg" alt="auto3">
+                <p>Suspensión</p>
+            </section>
+            <section class="card">    
+                <img class="imagen" src="imagenes/auto4.jpg" alt="auto4">
+                <p>Frenos</p>
+            </section>
+            <section class="card">    
+                <img class="imagen" src="imagenes/auto5.jpg" alt="auto5">
+                <p>Inyección</p>
+            </section>
+            <section class="card">
+                <img class="imagen" src="imagenes/auto6.jpg" alt="auto6">
+                <p>Armado de competición</p>
+            </section>
+        </section>
         </div>
         
        
