--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@
             <a class="redsoc" href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             
         <br>
-        <h3>GRUPO2 - Performance</h3>
-        <div>Kennedy 1014, El Talar, Buenos Aires, CP 1618<br>
+        <h3>GRUPO2 - Performance</h3><hr>
+        <div class="divFooter">Kennedy 1014, El Talar, Buenos Aires, CP 1618<br>
             Lunes a Viernes de 8:30hs a 12:30hs y de <br>
             14:30hs a 19:00hs<br> 
             Efectivo / Transferencia Bancaria
         </div>
+        <section>Alvaro Marquez - Felix Nobile - Aron Rojas - Anita</section>
         <p> Aviso Legal <br>
             Sitio web creado por GRUPO2 <br>
             Copyright ® 2023 </p>
