--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             14:30hs a 19:00hs<br> 
             Efectivo / Transferencia Bancaria
         </div>
-        <section>Alvaro Marquez - Felix Nobile - Aron Rojas - Anita</section>
+        <section>Alvaro Marquez - Felix Nobile - Aron Rojas - Anna Fragalá</section><hr>
         <p> Aviso Legal <br>
             Sitio web creado por GRUPO2 <br>
             Copyright ® 2023 </p>
