cambios en los html y css
estuve probando algunos cambios
para mejorar la visual

--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
         <div id="div_about">
             <h1>ARMADO DE AUTOS DE COMPETICION</h1>
             <!--<img id="img_about" src="imagenes/imagen2.jpg" alt="autopng" width="300" height="168" >-->
-            <iframe id="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3289.4023221131974!2d-58.64748552477897!3d-34.46731675030644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bca49deefae9a9%3A0x652445d19fb3261!2sJohn%20F.%20Kennedy%201014%2C%20B1618%20El%20Talar%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1682833232613!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe id="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3289.4023221131974!2d-58.64748552477897!3d-34.46731675030644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bca49deefae9a9%3A0x652445d19fb3261!2sJohn%20F.%20Kennedy%201014%2C%20B1618%20El%20Talar%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1682833232613!5m2!1ses!2sar"width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <h4 id="ubicenter">Ubicacion casa central</h4>
             <div><h2>Taller de autos importados en El Talar</h2>
-            <p>Taller dedicado a la reparación y transformación de<br> vehículos importados. 17 años de trayectoria en el rubro<br> avalan nuestro trabajo. Especialistas en mecánica y<br> armado de autos de competición</p>
+            <p>Taller dedicado a la reparación y transformación de vehículos importados. 17 años de trayectoria en el rubro<br> avalan nuestro trabajo. Especialistas en mecánica y armado de autos de competición</p>
             </div>
         </div>
     </main>
