--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/4879e652c8.js" crossorigin="anonymous"></script>
     <script src="https://www.google.com/webfonts" crossorigin="webfonts"></script>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="imagenes/icon.png">
     <title>GRUPO2 Performance, Servicio mecánico</title>
 
