Se cambio los links de los css para integrarlos en la web

--- a/about.html
+++ b/about.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4879e652c8.js" crossorigin="anonymous"></script>
     <script src="https://www.google.com/webfonts" crossorigin="webfonts"></script>
-<<<<<<< Updated upstream
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="imagenes/icon.png">
-=======
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/style.css">
+
+
+    <link rel="stylesheet" href="./CSS/main.css">
+    <link rel="stylesheet" href="./CSS/style.css">
     <link rel="icon" type="image/png" href="./imagenes/icon.png">
->>>>>>> Stashed changes
+
     <title>GRUPO2 Performance, Servicio mecánico</title>
 
 </head>
