Se cambio de Quienes somos a Donde estamos

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 <div class="topnav" id="myTopnav">
                     
                     <a href="index.html" class="active">Home</a>
-                    <a href="about.html">Quienes somos</a>
+                    <a href="about.html">Donde estamos</a>
                     <a href="servicio.html">Que hacemos</a>
                     <a href="form.html">Contacto</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
