Pruebas de media query

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="nav" href="servicio.html" >Qué Hacemos</a>
             <a class="nav" href="form.html" >Contacto</a>
         </nav> -->
-        <script>
+        <!-- <script>
         function myFunction() {
             var x = document.getElementById("myTopnav");
             if (x.className === "topnav") {
@@ -44,7 +44,7 @@
               x.className = "topnav";
             }
           }
-        </script>
+        </script> -->
 
                
             <div class="topnav" id="myTopnav">
@@ -95,5 +95,8 @@
             Copyright ® 2023 
         </p>
     </footer>
+
+    <script src="./Js/navResponsiveDropdown/navResponsive.js"></script>
+
 </body>
 </html>
