--- a/servicio.html
+++ b/servicio.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="./CSS/navResponsive.css">
 
     <link rel="stylesheet"
-      href="mobile.css"
+      href="./CSS/mobile.css"
       media="(max-width: 640px)">
 
-<link rel="stylesheet"
-      href="tablet.css"
+    <link rel="stylesheet"
+      href="./CSS/tablet.css"
       media="(min-width: 640px) and (max-width: 1280px)">
 
-<link rel="stylesheet"
+    <link rel="stylesheet"
       href="./CSS/main.css"
       media="(min-width: 1280px)">
 
