--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="icon" type="image/png" href="./imagenes/icon.png">
     <link rel="stylesheet" href="./CSS/navResponsive.css">
+
+    <link rel="stylesheet"
+    href="./CSS/mobile.css"
+    media="(max-width: 640px)">
+
+  <link rel="stylesheet"
+    href="./CSS/tablet.css"
+    media="(min-width: 640px) and (max-width: 1280px)">
+
+  <link rel="stylesheet"
+    href="./CSS/main.css"
+    media="(min-width: 1280px)">
     
 
     <title>GRUPO 2 Performance, Servicio mecánico</title>
