Cambie nombre de servicio a preparacion

--- a/servicio.html
+++ b/servicio.html
@@ -97,7 +97,7 @@
                     
                     <div class="card" style="background-image: url('./imagenes/auto6.jpg')">
                         <div>                        
-                            <p class="pServicio" id="textos">Armado de autos de competición</p>
+                            <p class="pServicio" id="textos">Preparación</p>
                         </div>
                     </div>
                 </div>                
