--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4879e652c8.js" crossorigin="anonymous"></script>
     <script src="https://www.google.com/webfonts" crossorigin="webfonts"></script>
+   
 
     
 
@@ -37,7 +38,7 @@
         </nav> -->
         <script>
         function myFunction() {
-            var x = document.getElementById("myTopnav");
+            let x = document.getElementById("myTopnav");
             if (x.className === "topnav") {
               x.className += " responsive";
             } else {
