--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <header>
         <script>
             function myFunction() {
-                var x = document.getElementById("myTopnav");
+                let x = document.getElementById("myTopnav");
                 if (x.className === "topnav") {
                   x.className += " responsive";
                 } else {
