--- a/servicio.html
+++ b/servicio.html
@@ -35,7 +35,7 @@
     <header>
         <!-- <script>
             function myFunction() {
-                let x = document.getElementById("myTopnav");
+                var x = document.getElementById("myTopnav");
                 if (x.className === "topnav") {
                   x.className += " responsive";
                 } else {
